# muon_calibration_project

./: .gitignore  CMakeLists.txt  Calibrator.C  Calibrator_old.C  CreateTrackTree.C  Create_mini_tree_short.C  LinkDef.h  MiniDST_analysis.C  README.md  WaveformAnalysis.C  Waveforms_calibration_nprocs.C  nprocs_MiniDST.sh  nprocs_calibration.sh
chEntry_diff_files/: AnalysisClasses.h  ChannelEntry.cpp  ChannelEntry.h
include/: CHSH_class.h  ChannelEntry.h  Double_scattering_cuts.h  DrawWaveforms.C  Map.h  MultiCoreAnalysis.h  PSDmuonTracker.h  PSDmuonTracker_old.h  constants.h  like_ivashkin_wants_it.h  muon_struct.h  time_left.h
src/: CHSH_class.cpp  ChannelEntry.cpp  MultiCoreAnalysis.cpp  PSDmuonTracker.cpp  PSDmuonTracker_old.cpp
